# whisper.cpp

./: .gitignore
examples/server/: BUILD_LINUX.md  CMakeCache.txt  CMakeLists.txt  README.md  WEBSOCKET_README.md  bench-websocket.js  bench.js  realtime-stream.cpp  realtime-stream.h  setup-websocket.sh  websocket-api.yaml  websocket-server.cpp
